--- a/public/app/css/style.css
+++ b/public/app/css/style.css
@@ -9,3 +9,80 @@
 
 #cart-section .mright {
   margin-right: 190px; }
+
+
+
+/*guest Checkout*/
+
+.checkout{
+    padding-bottom:50px;
+}
+
+.checkout-heading{
+    font-size:16px;
+    color:#fff;
+    background-color: #5f6874;
+    padding:10px;
+    font-weight: bold;
+}
+
+
+.btn-ck{
+    background-color: #5f6874;
+    color:#fff;
+    font-size: 15px;
+    margin-right:30px;
+    margin-top:10px;
+    border-radius: 0%;
+
+
+}
+
+ .btn-ck:hover{
+    color:#eae6e6;
+}
+
+.guest-checkout{
+    margin-top:50px;
+    margin-bottom: 50px;
+
+}
+
+
+.guest-checkout h2{
+    font-size:15px;
+    color:#fff;
+    background-color: #5f6874;
+    padding:10px;
+    font-weight: bold;
+
+
+
+
+}
+
+.form-control{
+    border-radius: 0;
+    font-size: 13px;
+}
+.input{
+
+}
+
+
+
+.btn-confirm{
+    background-color: #5f6874;
+    color:#f1f1f1;
+    border-radius: 0;
+    padding:5px 35px;
+    letter-spacing: 1px;
+    margin-top: 40px ;
+    margin-bottom: 40px;
+
+}
+
+.payment-method{
+    padding-top:20px;
+
+ }
